--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
     </div>
   </div>
   <div class="lower_container">
-    <a class="cont_pages" href="https://www.instagram.com/lakee_lakshman/">Instagram</a>
+    <a class="cont_pages" href="#">WhatsApp</a>
     <span>|</span>
-    <a class="cont_pages" href="https://www.linkedin.com/in/lakshmana-prasad-ankam-51165325a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BWM%2BrpQmURqeJAvkQsiQqug%3D%3D">LinkedIn</a>
+    <a class="cont_pages" href="#">Instagram</a>
+    <span>|</span>
+    <a class="cont_pages" href="#">LinkedIn</a>
     <p class="copyrigth" >© 2023 Lakshman @ Learner</p>
   </div>
 </body>
