--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GitLakshman</title>
+  <title>Lakshman-CV</title>
   <link rel="icon" type="image/x-icon" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
