--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="info">Self-Learner with Creative ideology.</p>
       <hr>
       <div class="my_skils">
-        <h1 class="my_skil_head">My Skils</h1>
+        <h1 class="my_skil_head">My Skills</h1>
       <div class="skil_row">
         <img class="html_img" src="pictures/html.png" alt="html img">
 
